Apply idea code analysis suggestions Http module